--- a/stílus.css
+++ b/stílus.css
@@ -1,8 +1,8 @@
-h2{background-color: lightpink;}
-{
+h2{background-color: lightpink;
+
     font-family: "Times New Roman", Times, serif;
-  }
-p.italic {
+ 
+    
     font-style: italic;
   }
     
